# akiflow-python-sdk

./: .gitignore  LICENSE  README.md  pyproject.toml
.github/workflows/: deploy.yml  docs.yml
docs/: akiflow.html  index.html  search.js
docs/akiflow/: auth.html  exceptions.html  label.html  task.html
examples/: create_and_done.py  label_lifecycle.py  login_and_create.py  token_and_create.py
src/akiflow/: __init__.py  auth.py  client.py  exceptions.py  label.py  task.py
tests/: test_examples.py
