[build-system]
requires = ["hatchling >= 1.26"]
build-backend = "hatchling.build"

[project]
name = "akiflow"
version = "0.0.1"
authors = [
    { name = "Moritz Thiele" },
]
description = "Unofficial Python SDK for the Akiflow task management software."
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "httpx>=0.27",
]
classifiers = [
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.13",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
]
license = "MIT"
license-files = ["LICEN[CS]E*"]

[project.urls]
Homepage = "https://github.com/thielem/akiflow-python-sdk"
Issues = "https://github.com/thielem/akiflow-python-sdk/issues"

[project.optional-dependencies]
docs = ["pdoc>=14"]
test = ["pytest>=8"]
